Task2/cards/cards.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

:root {
	--lightPink: #ff759f;
	--darkPink: #e75480;
	--green: rgb(32, 178, 117);
}

body {
	display: flex;
	flex-direction: column;
	height: auto;
	background-color: #171717;
	font-family: Arial, Helvetica, sans-serif;
	position: relative;
	justify-content: center;
	align-items: center;
}
#header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	width: 100%;
}
#projectTitle {
	font-family: "Poppins", sans-serif;
	color: white;
	font-size: 24px;
	margin-bottom: 20px;
}

#notFound {
	display: none;
	font-family: "Poppins", sans-serif;
	color: white;
	letter-spacing: 1.5px;
	text-align: center;
	margin-left: 20px;
}

#notFound.show {
	display: block;
}

.container {
	display: none;
	flex-wrap: wrap;
	justify-content: flex-start;
	padding: 10px;
	box-sizing: border-box;
	position: relative;
	margin: 20px;
}

.container.show {
	display: flex;
}

.container::before {
	content: "";
	position: absolute;
	background-color: rgb(58, 57, 57);
	width: 100%;
	height: 100%;
	border-radius: 15px;
	filter: blur(5px);
	z-index: -1;
}

#search {
	display: flex;
	flex-wrap: wrap;
	width: 100%;
	justify-content: flex-end;
	align-items: center;
	min-height: 40px;
	padding: 10px;
	box-sizing: border-box;
}

#search * {
	font-family: "Poppins", sans-serif;
	letter-spacing: 0.7px;
	margin: 0px 5px;
}

#search .labels {
	color: white;
}

#searchBarContainer {
	display: flex;
	align-items: center;
	width: 100%;
	max-width: 500px;
	position: relative;
	overflow: hidden;
	margin-bottom: 10px;
}

#searchBar {
	flex: 1;
	padding: 5px;
	border-radius: 20px;
	border: 2px solid transparent;
	color: black;
}

#searchBarContainer #searchBtn {
	position: absolute;
	top: 50%;
	right: 10px;
	transform: translateY(-50%);
	height: 25px;
	width: 25px;
	cursor: pointer;
	opacity: 1;
}

#searchBarContainer #searchBtn:hover {
	opacity: 0.8;
}

#searchBarContainer #searchBtn img {
	height: 25px;
	width: 25px;
}

#searchAndSuggestions {
	position: relative;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

#optionsList {
	display: none;
	position: absolute;
	z-index: 1000;
	width: 100%;
	max-height: 100px;
	overflow-y: auto;
}

.filters {
	margin: 5px;
	padding: 5px;
	border-radius: 5px;
	background: white;
	border: 1px solid grey;
	font-size: 14px;
}

.filters,
.filters * {
	color: grey;
}

.card {
	position: relative;
	display: flex;
	margin: 10px;
	align-items: center;
	justify-content: center;
	max-width: 200px;
	width: 100%;
	min-width: 200px;
	border-radius: 24px;
	line-height: 1.5;
	transition: all 0.48s;
}

#searchBarContainer:focus-within #searchBtn {
	animation: movingBtn 0.8s;
}

@keyframes movingBtn {
	from {
		transform: translate(-1300%, -62%);
	}
	to {
		transform: translate(0, -62%);
	}
}

.content {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	padding: 15px;
	border-radius: 10px;
	color: white;
	overflow: hidden;
	background: var(--green);
	transition: all 0.48s;
}

.content::before {
	width: 80%;
	height: 80%;
	z-index: -1;
}

.content::after {
	width: 80%;
	height: 80%;
	z-index: -2;
}

.content::after,
.content::before {
	position: absolute;
	content: "";
	top: -2%;
	left: 50%;
	transform: translate(-50%);
	background: var(--lightPink);
	opacity: 0.2;
	transform-origin: bottom;
	border-radius: inherit;
	transition: all 0.48s;
}

.content h1 {
	width: 100%;
	text-align: center;
}

.content .para {
	z-index: 1;
	opacity: 1;
	transition: all 0.48s;
	width: 100%;
	min-height: 100px;
	scrollbar-width: thin;
	scrollbar-color: var(--lightPink) var(--darkPink);
	resize: none;
	margin: 5px auto;
	scrollbar-darkshadow-color: #171717;
	border-radius: 5px;
	overflow: auto;
	font-family: "Times New Roman", Times, serif;
}

.card.hidden {
	display: none;
}

.card:hover {
	transform: translateY(-10px);
}

.card:hover .content::before {
	rotate: -6deg;
}

.card:hover .content::after,
.card:hover .content::before {
	top: 0;
	width: 100%;
	height: 100%;
}

.card:hover .content::after {
	rotate: 6deg;
}

.buttons {
	cursor: pointer;
	height: 20px;
	width: 20px;
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
	margin: 3px;
	transition: all 0.2s;
	opacity: 0.8;
}

.buttons:hover {
	opacity: 1;
}

.button-container {
	display: flex;
	width: 100%;
	justify-content: flex-end;
}

.outer {
	position: sticky;
	top: 20px;
	right: 5px;
	display: flex;
	justify-content: space-between;
	z-index: 10;
	color: white;
	font-family: "Poppins", sans-serif;
	background-color: rgb(0, 0, 0, 0.1);
	border-radius: 20px;
}

/* Popup styles */
.popup {
	display: none;
	position: fixed;
	z-index: 3;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	background-color: rgba(0, 0, 0, 0.4);
	opacity: 0;
	transition: opacity 0.5s ease;
}

@keyframes popUp {
	from {
		transform: translateY(100%);
		opacity: 0;
	}
	to {
		transform: translateY(0);
		opacity: 1;
	}
}

.popup.show {
	display: block;
	animation: popUp 0.5s ease forwards;
}

#titleInput:focus,
#idInput:focus {
	outline: none;
	border: 2px solid var(--lightPink);
	border-radius: 5px;
}

.popup-content {
	background-color: var(--lightPink);
	margin: 25% auto;
	padding: 20px;
	border: 1px solid var(--darkPink);
	width: 80%;
	transform: translateY(-50px);
	transition: transform 0.3s ease;
	border-radius: 20px;
}

.close-btn {
	color: white;
	float: right;
	font-size: 28px;
	font-weight: bold;
	cursor: pointer;
}

.close-btn:hover {
	color: #e75480;
	text-decoration: none;
}

#doneBtn,
#confirmUpdateBtn,
#cancelUpdateBtn,
#confirmDeleteBtn,
#cancelDeleteBtn {
	background-color: white;
	border-color: transparent;
	border-radius: 10px;
	color: #e75480;
	font-weight: bold;
}

#doneBtn:hover,
#confirmUpdateBtn:hover,
#cancelUpdateBtn:hover,
#confirmDeleteBtn:hover,
#cancelDeleteBtn:hover {
	background-color: #ff759f;
	color: white;
	border-color: white;
}

@media (max-width: 600px) {
	.card {
		max-width: 150px;
	}

	.card .content::after,
	.card .content::before {
		top: 0;
		width: 70%;
	}

	.card:hover .content::after,
	.card:hover .content::before {
		top: 0;
		width: 80%;
		height: 90%;
	}

	.content {
		padding: 10px;
	}

	.userImg {
		min-width: 100px;
	}

	.content .para {
		font-size: 10px;
	}

	.container {
		justify-content: center;
		align-items: center;
	}

	#searchBar {
		padding-right: 40px;
	}
}

@media (min-width: 601px) and (max-width: 900px) {
	.card {
		max-width: 175px;
	}

	.card:hover .content::after,
	.card:hover .content::before {
		top: 0;
		width: 90%;
		height: 90%;
	}

	.content {
		padding: 12px;
	}

	.content .para {
		font-size: 11px;
	}

	.container {
		justify-content: center;
		align-items: center;
	}
}

